[package]
name = "pkger"
version = "0.1.0"
authors = ["wojciech.kepka <wojtek.kepka@protonmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/wojciechkepka/pkger"
repository = "https://github.com/wojciechkepka/pkger"
keywords = ["unix", "linux", "deb", "rpm", "build"]
description = "Building tool inspired by fpm-builder"
categories = ["command-line-utilities"]


[dependencies]
anyhow = "1"
chrono = "0.4"
clap = "3.0.0-beta.2"
ctrlc = "3"
futures = "0.3"
moby = { git = "https://github.com/wojciechkepka/moby", branch = "master" }
rpmspec = { git = "https://github.com/wojciechkepka/rpmspec-rs", branch = "master" }
deb-control = { git = "https://github.com/wojciechkepka/deb-control-rs", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
tar = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.5"
tracing = "0.1"
tracing-futures = "0.1"
tracing-subscriber = { version = "0.2", features = ["fmt", "chrono"] }
lazy_static = "1"
async-trait = "0.1"
