[package]
name = "pkger"
version = "0.7.0"
description = "Package building tool utilizing Docker"
authors = ["Wojciech Kępka <wojciech@wkepka.dev>"]
repository = "https://github.com/vv9k/pkger"
homepage = "https://github.com/vv9k/pkger"
keywords = ["unix", "linux", "deb", "rpm", "docker"]
categories = ["command-line-utilities"]
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
pkger-core = { path = "../pkger-core" }

clap = "3.0.0-beta.5"
clap_generate = "3.0.0-beta.5"

chrono = "0.4"
colored = "2"
ctrlc = "3"
rpassword = "5"

regex = "1"
lazy_static = "1"

dirs = "3"
tempdir = "0.3"

serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8"

async-rwlock = "1"
futures = "0.3"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}

tracing = "0.1"
tracing-core = "0.1"
tracing-futures = "0.1"
tracing-subscriber = {version = "0.2", features = ["fmt", "chrono"]}
