[package]
name = "pkger-core"
version = "0.8.0"
edition = "2021"
authors = ["Wojciech Kępka <wojciech@wkepka.dev>"]
license = "MIT"

[dependencies]
deb-control = { path = "../libs/debcontrol" }
rpmspec = { path = "../libs/rpmspec" }
pkgbuild = { path = "../libs/pkgbuild" }
apkbuild = { path = "../libs/apkbuild" }

docker-api = { git = "https://github.com/vv9k/docker-api-rs" }
#podman-api = { git = "https://github.com/vv9k/podman-api-rs" }
podman-api = { path = "../../podman-api-rs" }

anyhow = "1"

tar = "0.4"
flate2 = "1"

chrono = "0.4"

colored = "2"

async-trait = "0.1"
async-rwlock = "1"
futures = "0.3"

serde = {version = "1.0", features = ["derive"]}
serde_cbor = "0.11"
serde_yaml = "0.8"

tempdir = "0.3"

uuid = { version = "0.8", features = ["serde", "v4"] }
lazy_static = "1"

[dev-dependencies]
pretty_assertions = "0.3"
