[package]
name = "pkger-core"
version = "0.10.0"
edition = "2021"
authors = ["Wojciech Kępka <wojciech@wkepka.dev>"]
license = "MIT"

[dependencies]
debbuild = { path = "../libs/debbuild" }
rpmspec = { path = "../libs/rpmspec" }
pkgbuild = { path = "../libs/pkgbuild" }
apkbuild = { path = "../libs/apkbuild" }
pkgspec-core = { path = "../libs/pkgspec-core" }

#docker-api = { git = "https://github.com/vv9k/docker-api-rs" }
docker-api = "0.12"
podman-api = { git = "https://github.com/vv9k/podman-api-rs" }
#podman-api = { path = "../../podman-api-rs" }
#podman-api = "0.8"

anyhow = "1"

tar = "0.4"
flate2 = "1"

chrono = "0.4"

colored = "2"

async-trait = "0.1"
async-rwlock = "1"
futures = "0.3"

serde = {version = "1.0", features = ["derive"]}
serde_cbor = "0.11"
serde_yaml = "0.8"
merge-yaml-hash = "0.2"

tempdir = "0.3"

uuid = { version = "0.8", features = ["serde", "v4"] }
lazy_static = "1"

git2 = "0.14"
tokio = "1"

http = "0.2"
ipnet = "2"
