[package]
name = "pkgbuild"
description = "Crate for PKGBUILD generation"
version = "0.1.1"
authors = ["Wojciech Kępka <wojciech@wkepka.dev>"]
edition = "2021"
license = "MIT"

[dependencies]
pkgspec = { path = "../pkgspec" }
pkgspec-core = { path = "../pkgspec-core" }
paste = "1"

[dev-dependencies]
pretty_assertions = "0.3"
