[package]
name = "pkgspec"
description = "Crate with derives for auto generation of methods for spec files like DEB and RPM"
version = "0.2.0"
authors = ["Wojciech Kępka <wojciech@wkepka.dev>"]
edition = "2021"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
paste = "1"
proc-macro2 = "1"
syn = "1"
quote = "1"
